force-app/main/default/objects/Movimiento_de_caja__c/Movimiento_de_caja__c.object-meta.xml
<CustomObject>
    <label>Movimiento de caja</label>
    <nameField>
        <displayFormat>mc-{00000000}</displayFormat>
        <label>Nombre de Movimiento de caja</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Movimientos de caja</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>