force-app/main/default/objects/Movimiento_de_caja__c/fields/Caja__c.field-meta.xml
<CustomField>
    <fullName>Caja__c</fullName>
    <label>Caja</label>
    <referenceTo>Caja__c</referenceTo>
    <relationshipLabel>Movimientos de caja</relationshipLabel>
    <relationshipName>Movimientos_de_caja</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>