force-app/main/default/objects/Movimiento_de_caja__c/fields/Cheque__c.field-meta.xml
<CustomField>
    <fullName>Cheque__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cheque</label>
    <referenceTo>Cheque__c</referenceTo>
    <relationshipLabel>Movimientos de caja</relationshipLabel>
    <relationshipName>Movimientos_de_caja</relationshipName>
    <type>Lookup</type>
</CustomField>