force-app/main/default/objects/Movimiento_de_caja__c/fields/Cotizacion_de_dolar__c.field-meta.xml
<CustomField>
    <fullName>Cotizacion_de_dolar__c</fullName>
    <description>Cotizacion del dolar al dia de la fecha.</description>
    <inlineHelpText>Cotizacion del dolar al dia de la fecha.</inlineHelpText>
    <label>Cotizacion de dolar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>