force-app/main/default/objects/Movimiento_de_caja__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Impactado</fullName>
                <default>true</default>
                <label>Impactado</label>
            </value>
            <value>
                <fullName>Pendiente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>