force-app/main/default/objects/Movimiento_de_caja__c/fields/Expensa_unidad__c.field-meta.xml
<CustomField>
    <fullName>Expensa_unidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expensa unidad</label>
    <referenceTo>Expensa_unidad__c</referenceTo>
    <relationshipLabel>Movimientos de caja</relationshipLabel>
    <relationshipName>Movimientos_de_caja</relationshipName>
    <type>Lookup</type>
</CustomField>