force-app/main/default/objects/Movimiento_de_caja__c/fields/Expensas__c.field-meta.xml
<CustomField>
    <fullName>Expensas__c</fullName>
    <formula>Expensa_unidad__r.Expensa__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expensas</label>
    <type>Text</type>
</CustomField>