force-app/main/default/objects/Movimiento_de_caja__c/fields/Fecha_movimiento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_movimiento__c</fullName>
    <label>Fecha movimiento</label>
    <required>true</required>
    <type>Date</type>
</CustomField>