force-app/main/default/objects/Movimiento_de_caja__c/fields/Medio_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Medio_de_pago__c</fullName>
    <label>Medio de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Efectivo</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Transferencia</fullName>
            </value>
            <value>
                <fullName>Debito</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>