force-app/main/default/objects/Movimiento_de_caja__c/fields/Obra__c.field-meta.xml
<CustomField>
    <fullName>Obra__c</fullName>
    <formula>if( Expensa_unidad__r.Obra__c != null, Expensa_unidad__r.Obra__r.Name, 
if( Orden_de_pago__r.Orden_de_compra__r.Obra__c != null, Orden_de_pago__r.Orden_de_compra__r.Obra__r.Name, 
if( Plan_de_pago__r.Unidad__r.Obra__c != null , Plan_de_pago__r.Unidad__r.Obra__r.Name ,
if ( Unidad__r.Obra__c != null, Unidad__r.Obra__r.Name, null ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Obra</label>
    <type>Text</type>
</CustomField>