force-app/main/default/objects/Movimiento_de_caja__c/fields/Orden_de_compra__c.field-meta.xml
<CustomField>
    <fullName>Orden_de_compra__c</fullName>
    <formula>Orden_de_pago__r.Orden_de_compra__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Orden de compra</label>
    <type>Text</type>
</CustomField>