force-app/main/default/objects/Movimiento_de_caja__c/fields/Orden_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Orden_de_pago__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Orden de pago</label>
    <referenceTo>Orden_de_pago__c</referenceTo>
    <relationshipLabel>Movimientos de caja</relationshipLabel>
    <relationshipName>Movimientos_de_caja</relationshipName>
    <type>Lookup</type>
</CustomField>