force-app/main/default/objects/Movimiento_de_caja__c/fields/Periodo_movimiento__c.field-meta.xml
<CustomField>
    <fullName>Periodo_movimiento__c</fullName>
    <formula>date(year(Fecha_movimiento__c), month( Fecha_movimiento__c ), 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Periodo movimiento</label>
    <type>Date</type>
</CustomField>