force-app/main/default/objects/Movimiento_de_caja__c/fields/Plan_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Plan_de_pago__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan de pago</label>
    <referenceTo>Cobro_unidad__c</referenceTo>
    <relationshipLabel>Movimientos de caja</relationshipLabel>
    <relationshipName>Movimientos_de_caja</relationshipName>
    <type>Lookup</type>
</CustomField>