force-app/main/default/objects/Movimiento_de_caja__c/fields/Unidad__c.field-meta.xml
<CustomField>
    <fullName>Unidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unidad</label>
    <referenceTo>Unidad__c</referenceTo>
    <relationshipLabel>Movimientos de caja</relationshipLabel>
    <relationshipName>Movimientos_de_caja</relationshipName>
    <type>Lookup</type>
</CustomField>