force-app/main/default/objects/Movimiento_de_caja__c/validationRules/Se_deben_completar_las_observaciones.validationRule-meta.xml
<ValidationRule>
    <fullName>Se_deben_completar_las_observaciones</fullName>
    <active>true</active>
    <errorConditionFormula>IF(  ISNEW() , ISBLANK( Observaciones__c ),FALSE )</errorConditionFormula>
    <errorMessage>El campo observacion no puede estar vacio.</errorMessage>
</ValidationRule>