force-app/main/default/objects/Movimiento_de_caja__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Fecha_movimiento__c</columns>
    <columns>Periodo_movimiento__c</columns>
    <columns>Expensa_unidad__c</columns>
    <columns>Expensas__c</columns>
    <columns>Orden_de_compra__c</columns>
    <columns>Orden_de_pago__c</columns>
    <columns>Plan_de_pago__c</columns>
    <columns>Obra__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>